--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1592,7 +1592,7 @@
               "default": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
@@ -1601,7 +1601,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
@@ -1612,7 +1612,7 @@
               "short": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
@@ -1621,7 +1621,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.text.sm}"
@@ -1634,7 +1634,7 @@
               "default": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
@@ -1643,7 +1643,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
@@ -1654,7 +1654,7 @@
               "short": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
@@ -1663,7 +1663,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.primary}",
+                    "fontFamily": "{app.fontFamily.surface.body.text}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.text.md}"
@@ -1678,7 +1678,7 @@
               "default": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.symbol.sm}"
@@ -1687,7 +1687,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.symbol.sm}"
@@ -1698,7 +1698,7 @@
               "short": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.symbol.sm}"
@@ -1707,7 +1707,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.symbol.sm}"
@@ -1720,7 +1720,7 @@
               "default": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.symbol.md}"
@@ -1729,7 +1729,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "160%",
                     "fontSize": "{app.fontSize.surface.body.symbol.md}"
@@ -1740,7 +1740,7 @@
               "short": {
                 "default": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.text}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.symbol.md}"
@@ -1749,7 +1749,7 @@
                 },
                 "strong": {
                   "value": {
-                    "fontFamily": "{config.fontFamily.symbol}",
+                    "fontFamily": "{app.fontFamily.surface.body.symbol}",
                     "fontWeight": "{config.fontWeight.medium}",
                     "lineHeight": "140%",
                     "fontSize": "{app.fontSize.surface.body.symbol.md}"
@@ -1764,7 +1764,7 @@
           "text": {
             "default": {
               "value": {
-                "fontFamily": "{config.fontFamily.primary}",
+                "fontFamily": "{app.fontFamily.surface.caption.text}",
                 "fontWeight": "{config.fontWeight.text}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.text}"
@@ -1773,7 +1773,7 @@
             },
             "strong": {
               "value": {
-                "fontFamily": "{config.fontFamily.primary}",
+                "fontFamily": "{app.fontFamily.surface.caption.text}",
                 "fontWeight": "{config.fontWeight.medium}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.text}"
@@ -1784,7 +1784,7 @@
           "symbol": {
             "default": {
               "value": {
-                "fontFamily": "{config.fontFamily.symbol}",
+                "fontFamily": "{app.fontFamily.surface.caption.symbol}",
                 "fontWeight": "{config.fontWeight.text}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.symbol}"
@@ -1793,7 +1793,7 @@
             },
             "strong": {
               "value": {
-                "fontFamily": "{config.fontFamily.symbol}",
+                "fontFamily": "{app.fontFamily.surface.caption.symbol}",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.symbol}"
@@ -1806,7 +1806,7 @@
           "text": {
             "default": {
               "value": {
-                "fontFamily": "{config.fontFamily.primary}",
+                "fontFamily": "{app.fontFamily.surface.footnote.text}",
                 "fontWeight": "{config.fontWeight.medium}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.text}"
@@ -1815,7 +1815,7 @@
             },
             "strong": {
               "value": {
-                "fontFamily": "{config.fontFamily.primary}",
+                "fontFamily": "{app.fontFamily.surface.footnote.text}",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.text}"
@@ -1826,7 +1826,7 @@
           "symbol": {
             "default": {
               "value": {
-                "fontFamily": "{config.fontFamily.symbol}",
+                "fontFamily": "{app.fontFamily.surface.footnote.symbol}",
                 "fontWeight": "{config.fontWeight.text}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.symbol}"
@@ -1835,7 +1835,7 @@
             },
             "strong": {
               "value": {
-                "fontFamily": "{config.fontFamily.symbol}",
+                "fontFamily": "{app.fontFamily.surface.footnote.symbol}",
                 "fontWeight": "{config.fontWeight.semibold}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.symbol}"
@@ -1849,7 +1849,7 @@
             "sm": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.code}",
+                  "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{config.fontWeight.text}",
                   "lineHeight": "160%",
                   "fontSize": "{app.fontSize.surface.code.text.sm}"
@@ -1858,7 +1858,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.code}",
+                  "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "160%",
                   "fontSize": "{app.fontSize.surface.code.text.sm}"
@@ -1869,7 +1869,7 @@
             "md": {
               "default": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.code}",
+                  "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{config.fontWeight.text}",
                   "lineHeight": "160%",
                   "fontSize": "{app.fontSize.surface.code.text.md}"
@@ -1878,7 +1878,7 @@
               },
               "strong": {
                 "value": {
-                  "fontFamily": "{config.fontFamily.code}",
+                  "fontFamily": "{app.fontFamily.surface.code.text}",
                   "fontWeight": "{config.fontWeight.medium}",
                   "lineHeight": "160%",
                   "fontSize": "{app.fontSize.surface.code.text.md}"
