update font fmailies

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2511,6 +2511,42 @@
             "type": "fontFamilies"
           }
         }
+      },
+      "control": {
+        "text": {
+          "value": "{config.fontFamily.ui}",
+          "type": "fontFamilies"
+        },
+        "symbol": {
+          "value": "{config.fontFamily.symbol}",
+          "type": "fontFamilies"
+        },
+        "number": {
+          "value": "{config.fontFamily.uiAlt}",
+          "type": "fontFamilies"
+        },
+        "initials": {
+          "value": "{config.fontFamily.uiAlt}",
+          "type": "fontFamilies"
+        }
+      },
+      "label": {
+        "text": {
+          "value": "{config.fontFamily.ui}",
+          "type": "fontFamilies"
+        },
+        "symbol": {
+          "value": "{config.fontFamily.symbol}",
+          "type": "fontFamilies"
+        },
+        "number": {
+          "value": "{config.fontFamily.uiAlt}",
+          "type": "fontFamilies"
+        },
+        "initials": {
+          "value": "{config.fontFamily.uiAlt}",
+          "type": "fontFamilies"
+        }
       }
     }
   }
