update caption footnote code

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1765,7 +1765,7 @@
             "default": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.text}",
-                "fontWeight": "{config.fontWeight.text}",
+                "fontWeight": "{app.fontWeight.surface.caption.text.default}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.text}"
               },
@@ -1774,7 +1774,7 @@
             "strong": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.text}",
-                "fontWeight": "{config.fontWeight.medium}",
+                "fontWeight": "{app.fontWeight.surface.caption.text.strong}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.text}"
               },
@@ -1785,7 +1785,7 @@
             "default": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.symbol}",
-                "fontWeight": "{config.fontWeight.text}",
+                "fontWeight": "{app.fontWeight.surface.caption.symbol.default}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.symbol}"
               },
@@ -1794,7 +1794,7 @@
             "strong": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.caption.symbol}",
-                "fontWeight": "{config.fontWeight.semibold}",
+                "fontWeight": "{app.fontWeight.surface.caption.symbol.strong}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.caption.symbol}"
               },
@@ -1807,7 +1807,7 @@
             "default": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.text}",
-                "fontWeight": "{config.fontWeight.medium}",
+                "fontWeight": "{app.fontWeight.surface.footnote.text.default}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.text}"
               },
@@ -1816,7 +1816,7 @@
             "strong": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.text}",
-                "fontWeight": "{config.fontWeight.semibold}",
+                "fontWeight": "{app.fontWeight.surface.footnote.text.strong}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.text}"
               },
@@ -1827,7 +1827,7 @@
             "default": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.symbol}",
-                "fontWeight": "{config.fontWeight.text}",
+                "fontWeight": "{app.fontWeight.surface.footnote.symbol.default}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.symbol}"
               },
@@ -1836,7 +1836,7 @@
             "strong": {
               "value": {
                 "fontFamily": "{app.fontFamily.surface.footnote.symbol}",
-                "fontWeight": "{config.fontWeight.semibold}",
+                "fontWeight": "{app.fontWeight.surface.footnote.symbol.strong}",
                 "lineHeight": "160%",
                 "fontSize": "{app.fontSize.surface.footnote.symbol}"
               },
